Fix links stuck in :hover state after being scrolled off of using the mouse wheel (bug 78765). r=hewitt, sr=hyatt, a=roc.